Reorganize SASS files, fix blog section mobile view.

--- a/assets/sass/2-components/_blog.scss
+++ b/assets/sass/2-components/_blog.scss
@@ -14,24 +14,6 @@
     position: relative;
     align-items: center;
     border: 1px solid var(--color-grey-dark-4);
-
-    @media only screen and (max-width: $bp-sm) {
-        
-        &::before {
-            content: "read |";
-            position: absolute;
-            letter-spacing: .5rem;
-            top: 3.5rem;
-            right: 12vw;
-            // width: 70%;
-            margin-left: auto;
-            font-size: 5rem;
-            font-weight: 200;
-            opacity: .2;
-            align-self: center;
-            color: var(--color-grey-dark-3);
-        }
-    }
 }
 
 .blog-wrapper {
@@ -40,16 +22,9 @@
     width: 75%;
     height: 75vh;
     overflow-y: scroll;
-    padding-top: 2rem;
-    border-top: 1px solid var(--color-grey-dark-4);
-    border-bottom: 1px solid var(--color-grey-dark-4);
 
     @media only screen and (max-width: $bp-sm) {
-        overflow-y: hidden;
-        height: 69vh;
-        padding-top: 2rem;
-        border-top: 1px solid var(--color-grey-dark-4);
-        border-bottom: 1px solid var(--color-grey-dark-4);
+        height: 85vh;
     }
 }
 
@@ -78,12 +53,13 @@
     
     &__title {
         position: absolute;
-        top: 25%;
+        bottom: 25%;
         right: -1%;
-        transform: scale(1.1) rotate(90deg);
+        transform: rotate(90deg);
 
         @media only screen and (max-width: $bp-sm) {
-            display: none;
+            bottom: 75%;
+            right: -3%;
         }
     }
 
